--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:"space mono", serif;
 }
 
 :root {
@@ -13,7 +14,7 @@
     --green-680: #547878;
     --green-700: #306666;
     --green-880: #004748;
-    --Light-green:#2602AE;
+    --Light-green:#37caaa;
     --withe: #FFFFFF;
 }
 
@@ -26,4 +27,60 @@ header{
     display: flex;
     justify-content: center;
     padding-block: 2.8rem;
+}
+
+main{
+    background-color: var(--withe);
+    padding: 2rem;
+}
+
+.conta {
+    margin-bottom: 2rem;
+}
+
+.conta label,
+.gorjeta label {
+    color: var(--green-500);
+    font-weight: 700;
+}
+
+.conta div {
+    margin-top: 0.4rem;
+    background-color: var(--green-100);
+    padding: 0.4rem 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0.3125rem;
+}
+
+.conta input {
+    border: none;
+    text-align: right;
+    width: 100%;
+    background: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--green-880);
+    outline: none;
+}
+
+.conta input::placeholder{ 
+    color: var(--green-300);
+}
+
+.conta:has(input:focus) div {
+    outline: 2px solid var(--Light-green);
+}
+
+.gorjeta div {
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem
+    ;
+}
+
+.gorjeta #outra {
+    width: 100%;
 }
