--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ main{
     outline: 2px solid var(--Light-green);
 }
 
+.gorjeta {
+    border: 1px;
+}
+
 .gorjeta div {
     margin-top: 1rem;
     display: grid;
@@ -81,6 +85,24 @@ main{
     ;
 }
 
+.gorjeta input{
+    font-size: 1.5rem;
+    font-weight: 700;
+    border: none;
+    text-align: center;
+    outline: none;
+    padding-block: 0.4rem;
+    border-radius: 0.3125rem;
+    background-color: var(--green-880);
+    color: var(--withe)
+}
+
 .gorjeta #outra {
     width: 100%;
+    background-color: var(--green-100);
+    color: var(--green-880);
+}
+
+.gorjeta #outra::placeholder {
+    color: var(--green-300);
 }
