--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ header{
 main{
     background-color: var(--withe);
     padding: 2rem;
+    border-radius: 1.5625rem 1.5625rem 0 0;
 }
 
 .conta,
-.gorjeta {
+.gorjeta,
+.pessoas {
     margin-bottom: 2rem;
 }
 
@@ -108,4 +110,30 @@ main{
 
 .gorjeta #outra::placeholder {
     color: var(--green-300);
+}
+
+.pessoas #erro {
+    display: none;
+}
+.resultados{
+    background-color: var(--green-880);
+    border-radius: 0.9375;
+    padding: 1.5rem;
+}
+
+.resultados div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+   
+.resultados p {
+    color: var(--green-400);
+    font-size: 0.8125rem;
+    }
+
+    
+.resultados p strong {
+    color: var(--withe);
+    font-size: 1rem;
 }
