--- a/style.css
+++ b/style.css
@@ -156,4 +156,27 @@ main{
     background: var(--Light-green);
     border: none;
     border-radius: 0.3125rem;
+    color: var(--green-880);
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    padding-block: 0.5rem;
+}
+
+@media(min-width: 920px){
+    main {
+        display: flex;
+        gap: 3rem;
+        padding: 3rem;
+        border-radius: 1.5625rem;
+        max-width: 57.5rem;
+        margin-inline: auto;
+    }
+
+    main section{
+        width: 100%;
+    }
+     
+    .gorjeta div {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
