--- a/style.2.css
+++ b/style.2.css
@@ -121,7 +121,7 @@ main{
     padding: 1.5rem;
 }
 
-.resultados div div {
+.resultados div {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -163,6 +163,18 @@ main{
 }
 
 @media(min-width: 920px){
+    body {
+        display: flex;
+        Flex-direction: column;
+        min-height: 108svh;
+        Justify-content: center;
+        gap: 5rem;
+    }
+    header {
+        padding: 0;
+    }
+
+
     main {
         display: flex;
         gap: 3rem;
@@ -176,22 +188,7 @@ main{
         width: 100%;
     }
      
-    .conta input::-webkit-inner-spin-button,
-    .pessoas input::-webkit-inner-spin-button{
-        display: none;
-    }
-
     .gorjeta div {
         grid-template-columns: 1fr 1fr 1fr;
-    }
-
-    .resultados {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .resultados div > strong {
-        font-size: 3rem;
     }
 }
