--- a/style.css
+++ b/style.css
@@ -10,12 +10,17 @@
     --green-200: #c5e4e7;
     --green-300: #9EBBBD;
     --green-400: #7F9D9F;
-    --green-500: #5E7A70;
+    --green-500: #5e7a7d;
     --green-680: #547878;
-    --green-700: #306666;
-    --green-880: #004748;
-    --Light-green:#37caaa;
+    --green-700: #3D6666;
+    --green-880: #00474B;
+    --Light-green:#26C2AE;
     --withe: #FFFFFF;
+    --green-hover: #9fe8df;
+    --danger: #e17457;
+
+
+
 }
 
 body{
@@ -49,7 +54,7 @@ main{
 }
 
 .conta div,
-.pessoas div {
+.pessoas .input-box {
     margin-top: 0.4rem;
     background-color: var(--green-100);
     padding: 0.4rem 1.2rem;
@@ -77,8 +82,14 @@ main{
 }
 
 .conta:has(input:focus) div,
-.pessoas:has(input:focus) div {
+.conta:has(input:hover) div,
+.pessoas:has(input:focus) .input-box,
+.pessoas:has(input:hover) .input-box,
+.gorjeta #outra:focus,
+.gorjeta #outra:hover {
     outline: 2px solid var(--Light-green);
+    cursor: pointer;
+    
 }
 
 
@@ -102,6 +113,20 @@ main{
     color: var(--withe)
 }
 
+
+.gorjeta input[type="button"]:hover,
+.resultados button:hover {
+    background-color: var(--green-hover);
+    cursor: pointer;
+
+}
+
+.gorjeta input[type="button"]:hover {
+    background-color: var(--green-hover);
+    cursor: pointer;
+
+}
+
 .gorjeta #outra {
     width: 100%;
     background-color: var(--green-100);
@@ -112,9 +137,22 @@ main{
     color: var(--green-300);
 }
 
-.pessoas #erro {
-    display: none;
+.pessoas .textos { 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
+
+.pessoas #erro-div {
+    outline: 2px solid var(--danger);
+}
+
+.pessoas #erro {
+    font-size: 0.75rem;
+    color: var(--danger);
+    font-weight: 700;
+ }
 .resultados{
     background-color: var(--green-880);
     border-radius: 0.9375rem;
@@ -161,6 +199,12 @@ main{
     font-size: 1.25rem;
     padding-block: 0.5rem;
 }
+.conta input::-webkit-inner-spin-button,
+.pessoas input::-webkit-inner-spin-button,
+.gorjeta #outra::-webkit-inner-spin-button {
+    display: none;
+}
+
 
 @media(min-width: 920px){
     main {
@@ -176,11 +220,7 @@ main{
         width: 100%;
     }
      
-    .conta input::-webkit-inner-spin-button,
-    .pessoas input::-webkit-inner-spin-button{
-        display: none;
-    }
-
+   
     .gorjeta div {
         grid-template-columns: 1fr 1fr 1fr;
     }
